antex-rs/tui/src/snapshots/antex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
 ▀▄       ▄▀
  ▄▀█████▀▄    ╭─ alchemmist antex · unknown ─────╮
▄█▀▀█████▀▀█▄  │  gpt-test · high                 │
▀▀▄▄▀▀▀▀▀▄▄▀▀  │  /tmp/project                    │
  ██  ▄  ██    ╰──────────────────────────────────╯
   ▀▀▀ ▀▀▀
