antex-rs/tui/src/snapshots/antex_tui__app__tests__thread_read_model_after_switch.snap
---
source: tui/src/app/tests.rs
expression: model_line
---
▄█▀▀█████▀▀█▄  │  server-reported-model           │
