antex-rs/tui/src/snapshots/antex_tui__app__tests__transcript_reflow_restyles_existing_user_message_after_theme_change.snap
---
source: tui/src/app/tests.rs
expression: "format!(\"dark:\\n{dark_lines:#?}\\nlight:\\n{light_lines:#?}\")"
---
dark:
[
    HyperlinkLine {
        line: Line::from("Previously submitted prompt").white().on_black(),
        hyperlinks: [],
    },
]
light:
[
    HyperlinkLine {
        line: Line::from("Previously submitted prompt").black().on_white(),
        hyperlinks: [],
    },
]
